--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
     <h1>vai ser uma imagem aqui</h1>
     <ul>
-    </ul><li>estuante</li>
-</ul><li>escola</li>
+    <li>estuante</li>
+    <li>escola</li>
     </ul>
+</header>
 </body>
 </html>
